# convertfall

./: .gitignore  Cargo.toml  README.md  exact.tower  menuAtlas.json
schemas/: Cargo.toml
schemas/src/: lib.rs  math_schema.rs
schemas/src/atlas/: mod.rs  texture_atlas.rs
schemas/src/workshop/: tower.rs
src/: main.rs
src/converter/: mod.rs  packerjsontoxml.rs  towerconverter.rs  xmltopackerjson.rs
