[package]
name = "convertfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemas = { path = "./schemas" }
serde = { version = "1.0.145", features = ["derive"] }
quick-xml = { version = "0.25.0", features = ["serialize"] }
serde_json = "1.0"
clap = { version = "4.0.2", features = ["derive"] }
anyhow = "1.0.65"
thiserror = "1.0.37"

[workspace]
member = [
  "schemas"
]
